--- a/package.json
+++ b/package.json
@@ -14,21 +14,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
     "expo": "~51.0.21",
+    "expo-blur": "~13.0.2",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
